modified new form for categories

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,19 +5,15 @@
   </header>
 
   <div class="well">
-    <%= link_to '+ New Product', [:new, :admin, :category], class: 'btn btn-info' %>
+    <%= link_to '+ New Category', [:new, :admin, :category], class: 'btn btn-info' %>
   </div>
 
-  <div class="panel panel-default products">
+  <div class="panel panel-default categories">
 
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th colspan="2">Product</th>
           <th>Category</th>
-          <th>Price</th>
-          <th>Qty Remaining</th>
-          <th></th>
         </tr>
       </thead>
       <tbody>
