--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
-      <%= form_for [:admin, @categories] do |form| %>
+      <%= form_for [:admin, @category] do |form| %>
 
         <% if form.object.errors.any? %>
           <div class="alert alert-danger">
@@ -26,11 +26,6 @@
         <div class="form-group">
           <%= form.label :name %>
           <%= form.text_field :name, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :image %>
-          <%= form.file_field :image %>
         </div>
 
         <%= form.submit 'Create Category', class: 'btn btn-primary' %>
