moved render to a partial

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,15 +6,13 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
-    <% @order.line_items.each do |i| %>
-    <div>
-      <%= image_tag i.product.image.tiny %>
-      <span><%= i.product.name %></span>
-      <div><%= i.product.description %></div>
-    </div>
+    <% @order.line_items.each do |item| %>
+      <%= render 'list', product: item.product %>
     <% end %>
     <%= @order.total_cents * 0.01 %>
-    <%= current_user.email %>
+    <% if current_user %>
+      <%= current_user.email%>
+    <% end %>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
