modified sent email message

--- a/app/views/user_mailer/order_email.text.erb
+++ b/app/views/user_mailer/order_email.text.erb
@@ -1,4 +1,7 @@
-
+<% @order.line_items.each do |item| %>
+      <%= item.product.name %>
+<% end %>
+Total <%= @order.total_cents * 0.01 %>
 
 <%# Since you don't know their name information, it can just have a generic greeting
 The Order ID should be in the subject line
