--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,10 @@
 <section class="products-index">
 
+
+  <% if flash.notice %>
+    <div class="notice"><%= flash.notice %></div>
+  <% end %>
+
   <header class="page-header">
     <h1>Products</h1>
   </header>
