added relationship to models

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,5 @@
 <div><% p @reviews[0].description %></div>
+<div><% p @reviews[0] %></div>
 <div><%= @reviews[0].description %></div>
+
+<%# Review.where(product_id: 12) %>
