single review rendering

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
           <dt>Price</dt>
           <dd><%= @product.price %></dd>
           <dt>Reviews</dt>
-          <dd><% p @reviews %></dd>
+          <dd><%= @product.reviews[0].description %> <%= @product.reviews[0].rating %>/5</dd>
         </dl>
       </div>
     </div>
