updated seed file

--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -1,4 +1,4 @@
             <tr>
-              <td><%= review.user.first_name %> <%= review.user.last_name %>:</td>
+              <td><%= review.user.first_name %> <%= review.user.last_name %></td>
               <td><%= review.description %> <%= review.rating %>/5</td>
             </tr>
