--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,6 +7,10 @@
   </header>
   <p class="description">
     <%= product.description %>
+    <% if product.reviews.length > 0 %>
+    <% p '-----------------'%>
+    <%= product.reviews.average(:rating).round(2) %>
+    <% end %>
   </p>
   <footer class="actions">
     <%= link_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary', method: :put do %>
