--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,7 +30,7 @@
               <td>Name</td>
               <td>Rating</td>
             <tr>
-            <% @product.reviews.each do |review| %>
+            <% @product.reviews.reverse.each do |review| %>
               <%= render 'review', review: review %>
             <% end %>
           </table>
