average ratings and count of reviews

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,14 +3,16 @@
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
+        <% if product.reviews.length > 0 %>
+        <% p '-----------------'%>
+        <h5>Average Rating: <%= product.reviews.average(:rating).round(2) %> (<%=product.reviews.length%> reviews)</h5>
+        <% else %>
+        <h5>0 reviews</h5>
+        <% end %>
     <% end %>
   </header>
   <p class="description">
     <%= product.description %>
-    <% if product.reviews.length > 0 %>
-    <% p '-----------------'%>
-    <%= product.reviews.average(:rating).round(2) %>
-    <% end %>
   </p>
   <footer class="actions">
     <%= link_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary', method: :put do %>
