--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,12 +39,14 @@
     </div>
 
 <div>
+<% if current_user %>
 <%= form_for [@product, @review] do |f| %>
      <%= f.text_field :description %>
      <%= f.select :rating, [1,2,3,4,5] %>
      <%= f.hidden_field :product_id, value: @product.id %>
      <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.submit "Add Review", class: "btn" %>
+<% end %>
 <% end %>
 </div>
 
