modified email template

--- a/app/views/user_mailer/order_email.html.erb
+++ b/app/views/user_mailer/order_email.html.erb
@@ -10,7 +10,7 @@
           <div><%= item.product.name %></div>
       </div>
     <% end %>
-    Total <%= @order.total_cents * 0.01 %>
+    Total <%= number_to_currency(@order.total_cents * 0.01) %>
 
 
   </body>
