--- a/app/views/user_mailer/order_email.text.erb
+++ b/app/views/user_mailer/order_email.text.erb
@@ -2,7 +2,7 @@
 <%= item.product.name %>
 <% end %>
 
-Total <%= @order.total_cents * 0.01 %>
+Total <%= number_to_currency(@order.total_cents * 0.01) %>
 
 <%# Since you don't know their name information, it can just have a generic greeting
 The Order ID should be in the subject line
